# codetroll

./: .gitignore  CONTRIBUTING.md  README.md  codetroll.cabal
src-exec/: Main.hs
src-test/: hunit.hs
src/Codetroll/: Git.hs  IgnoreFile.hs  Main.hs
