name:           codetroll
version:        0.1.0.0
cabal-version:  >=1.8
build-type:     Simple
license-file:   LICENSE.txt
maintainer:     laurence@rouesnel.com
synopsis:       A command line tool that protects against intellectual property leaks in git commits.
author:         Laurence Rouesnel


library
  hs-source-dirs: src
  build-depends: 
    base              ==4.6.*, 
    shelly            ==1.*, 
    shelly-extra      ==0.2.*,
    system-filepath   ==0.4.*, 
    text              ==0.11.*, 
    attoparsec        ==0.10.*,
    text-icu          ==0.6.*, 
    shakespeare-text  ==1.0.*

  exposed-modules: Codetroll.Main, Codetroll.Git, Codetroll.IgnoreFile

executable codetroll    
  main-is: Main.hs
  hs-source-dirs: src-exec
  build-depends: base, codetroll

test-suite hunit
  type:           exitcode-stdio-1.0
  main-is:        hunit.hs
  hs-source-dirs: src-test
  build-depends:
    base,
    codetroll,
    text                    ==0.11.*,
    attoparsec              ==0.10.*,
    HUnit                   >= 1.2,
    test-framework          >= 0.6,
    test-framework-hunit    >= 0.2,
    test-framework-th       >= 0.2